# VoxelBot

./: .gitignore  README.md  docker_run.sh  dockerfile  pyproject.toml
assets/faqs/: fiftyone-teams.md  quickstart.md
tools/: dump_messages.py
voxelbot/: .env_example  __main__.py  cli.py  constants.py
voxelbot/bots/: __init__.py  voxy.py
voxelbot/plugins/: code_metrics.py  easy_github_contribution.py  faqs.py  logging.py  misc.py  moderation_menu.py
