[project]
name = "voxelbot"

dependencies = [
    "hata",
    "hata[all]",
    "pygithub",
    "aiosqlite",
    "inotify-simple",
    "pygal",
    "cairosvg",
    "cryptography",
    "numpy",
    "prettytable",
]
readme.file = "README.md"
readme.content-type = "text/markdown"
requires-python = ">=3.6"

dynamic = ["version", "optional-dependencies"]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project.scripts]
# Allows doing: "$ voxelbot" from terminal after installed.
voxelbot = "voxelbot.cli:main"

[tool.setuptools]
include-package-data = false

# `packages` are the directories with that should be included when installed.
# Includes all the `.py` files by default and no other files.
# Should NOT include test directories.
packages = ["voxelbot", "voxelbot.bots", "voxelbot.plugins"]
